<resources>
    <string name="app_name">MAGic Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startSplashScreen">Картинка при запуске приложения</string>
    <string name="appName">MAGic-Player</string>
    <string name="all_rights_are_reserved">© М.А.Горбатенков, 2022</string>
    <string name="search" />
    <string name="open_music">Open Music</string>
    <string name="music_from_playlist">Изображение альбома в плейлисте</string>
    <string name="file_name">Название музыкальной композиции</string>
    <string name="return_button_prev_page">Кнопка возврата на предыдущую страницу</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_menu">Пользовательское меню</string>
    <string name="music_art_playing">Обложка музыкальной композиции</string>
    <string name="gradient_image_playing">Градиент изображения</string>
    <string name="name_artist_song">Музыкальный исполнитель</string>
    <string name="this_is_song_name">Название песни</string>
    <string name="shuffle_music_player">Случайный режим воспроизведения</string>
    <string name="play_previous_song">Проигрывать предыдущую мелодию</string>
    <string name="button_play_music">Кнопка для воспроизведения</string>
    <string name="play_next_music">Воспроизведение следующей композиции</string>
    <string name="repeat_song">Повторить воспроизведение композиции</string>
    <string name="time_starting_song">1:28</string>
    <string name="time_end_music">4:20</string>
    <string name="name_album_music">Название альбома</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="image_art">Обложка для песен</string>
    <string name="back_menu_app_info">Фон для раздела меню</string>
    <string name="icon_app">Иконка приложения</string>
    <string name="name_player">MAGic Player</string>
    <string name="version_app">Версия 1.0</string>
    <string name="developed_by">Разработал</string>
    <string name="name_developer">Горбатенков Михаил</string>
    <string name="edit_icon">Векторный значок</string>
    <string name="menu_about_application">О приложении</string>
    <string name="oops">OOPS!</string>
    <string name="update_page_app">Извините! Обновляем страницу!</string>
    <string name="menu_settings">Настройки</string>
    <string name="music_album_count">Альбом состоит из </string>
    <string name="count_audio">%d Аудио </string>
    <string name="exit_app">Выход</string>
</resources>