...
        <ImageView
            android:id="@+id/play_prev"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="32dp"
            android:layout_toLeftOf="@id/play_pause"
            android:src="@drawable/ic_skip_previous"
            android:contentDescription="@string/play_previous_song"
            android:layout_marginStart="32dp"
            android:layout_toStartOf="@id/play_pause" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
...
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seek_bar_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
...
