...
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_play_circle_filled_black_24dp"/>

        <TextView
            android:id="@+id/song_play_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/music_album_count"
...
